@@ -113,7 +113,7 @@
         <configuration>
           <source>22</source>
           <target>22</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <enablePreview>true</enablePreview>
         </configuration>
       </plugin>
 
